--- a/index.html
+++ b/index.html
@@ -1,2 +1,83 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="styles.css">
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <title>Foreign Students Article</title>
+
+</head>
+<body>
+  <h1>Foreign Students Could Buoy Cash-strapped US Universities</h1>
+  <h4>Alexandra Macia</h4>
+  <h4>October 21, 2020</h4>
+<div id="content">
+<p>International students might be a boon for many colleges and universities to offset losses during the coronavirus pandemic, say experts.</p>
+
+<p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the Global Migration Center at the University of California, Davis.</p>
+
+<p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
+
+<p>Additionally, when international students pay full rates for college or university, domestic students benefit.</p>
+
+<p>“Full-sticker price tuition revenue from international students helps to provide more subsidies for American students,” the Global Migration Center explained. “International students also help universities buffer against declines in government funding that have occurred for several decades.”</p>
+
+<p>“International students — who are not eligible for financial aid and pay full price tuition — are a critical source of tuition revenues for public and private American universities,” it posted in July on its website.</p>
+
+<p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
+
+<p>But colleges and universities are hurting financially as the pandemic has shut down many campuses since March, sending students online and off campus, and causing many to defer admission or transfer until the pandemic subsides.</p>
+
+
+<p>In April, when the infection continued to shutter campuses nationwide, then-University of California President Janet Napolitano pleaded for funding assistance in a letter to Governor Gavin Newsom.</p>
+
+<p>“I am bringing to your attention these significant, unanticipated costs to UC in many areas from health to student housing, which for March 2020 alone totaled $558 million,” wrote Napolitano.</p>
+
+<p>“As you consider the 2020-2021 State budget, providing funding for UC to cover some of our COVID-19 response costs will help UC provide students the education they were promised, treat our employees with fairness, and provide our communities with compassionate care.”</p>
+
+<p>Smaller, liberal arts colleges have experienced financial challenges for years, and experts have predicted a decline in their number since before COVID-19, the disease caused by the coronavirus.</p>
+
+<p>MacMurray College in Jacksonville, Illinois, for example, with a student enrollment of 550 students, and 25% ethnic diversity, closed in May 2020 after 174 years of educating students. MacMurray’s board voted unanimously to close the school after determining there was “no viable financial path forward,” said Chairman of the Board of Trustees Charles O'Connell in a press release.</p>
+
+<p>The economic disruption of COVID-19 factored into MacMurray's decline, according to O’Connell.</p>
+
+<p>Considering the financial contributions of international students, U.S. colleges are focusing on recruitment overseas, according to the Institute of International Education’s 2019 Fall International Student Enrollment Snapshot Survey Report.</p>
+
+
+<p>Colleges are prioritizing student outreach to include China, India and Vietnam, according to IIE. Of the more than 1 million international students in the U.S., half are from China and India.</p>
+
+<p>Among Ivy League admissions for the Class of 2024, international students made up 14% of admitted students at Dartmouth College in New Hampshire and 10% of admissions at Princeton University in New Jersey, according to data from the group International College Counselors.</p>
+
+<p>And while Ivy League — top-rated, prestigious schools that admit only a fraction of applicants — enjoy large endowments (operating budgets), they, too, have made cutbacks in the face of escalating costs and reduced revenue during the pandemic.</p>
+
+
+
+<p>“Faced with an increasingly competitive global higher education environment vying to attract the brightest minds from around the world, institutions across the United States continue to explore and expand ways to build recruitment pipelines and work to create an inclusive environment that reiterates that international students are welcome here,” IIE reported.</p>
+
+<p>But enrollment of international students stalled in the last counting, according to IIE. Reasons include the high cost of tuition and fees, visa barriers, perceived crime in the U.S., political rhetoric and anti-immigrant speech.</p>
+
+<p>Among responding colleges and universities, 51% reported a decrease, 42% reported an increase, and 7% indicated the number was the same as last year, in new international student enrollment.</p>
+
+<p>“Unfortunately, due in large part to challenges securing visas and safety concerns related to the pandemic, international student enrollment at Wesleyan [University] decreased by about 15% this semester,” according to Lauren Rubenstein, the director of media relations and public relations at Wesleyan University in Connecticut, in an email to VOA.</p>
+
+<p>“A significant number of our frosh international students postponed their matriculation until the spring term because they were not able to secure visa interview appointments prior to the start of classes this fall.” Frosh is a nickname for freshmen, or first-year students.</p>
+
+<p>Wesleyan is collaborating with “peer institutions” to host a series of virtual events for international students, including virtual admissions workshops, online fairs, and virtual school visits to recruit students for the coming year, according to Rubenstein. International students make up 12% of Wesleyan's student body.</p>
+
+<p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to NAFSA’s 2020 Financial Impact Survey.</p>
+
+<p>“The loss of $41 billion contributed to local economies by international students each year would also be incredibly damaging to America as it begins to recover from the COVID-19 pandemic,” said Mary Sue Coleman, Association of American Universities president in a briefing regarding restrictions on international students in July 2020.</p>
+
+<p>NAFSA estimates that higher education will lose “at least $3 billion” because of declines in international student enrollment for Fall 2020.</p>
+
+<p>Schools say it’s not only through revenue that foreign students contribute to the college or university community.</p>
+
+<p>“International students contribute greatly to Wesleyan and our surrounding community by increasing social, cultural, and linguistic diversity on campus and beyond,” Rubenstein wrote. “This diversity is invaluable to the experience of all students.”</p>
+
+<p>They also “contribute to the intellectual vibrancy and diversity of our campuses,” wrote the Presidents’ Alliance on Higher Education and Immigration to the Department of Homeland Security earlier this year, when the coronavirus began to send students home and shut campuses.</p>
+
+<p>“A recognition of these contributions and commitment to continuing to welcome these students in future enrollment cycles are absolutely critical to maintaining our country’s top-tier status in attracting and retaining international students,” the alliance of more than 450 college and university presidents stated.</p>
+</div>
+</body>
+</html>
