added graphics and photos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
@@ -18,6 +18,8 @@
 <p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the Global Migration Center at the University of California, Davis.</p>
 
 <p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
+<iframe title="Economic Value International Students: Community College " aria-label="Split Bars" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="4315"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
 
 <p>Additionally, when international students pay full rates for college or university, domestic students benefit.</p>
 
@@ -26,6 +28,8 @@
 <p>“International students — who are not eligible for financial aid and pay full price tuition — are a critical source of tuition revenues for public and private American universities,” it posted in July on its website.</p>
 
 <p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
+<iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
 
 <p>But colleges and universities are hurting financially as the pandemic has shut down many campuses since March, sending students online and off campus, and causing many to defer admission or transfer until the pandemic subsides.</p>
 
@@ -35,7 +39,9 @@
 <p>“I am bringing to your attention these significant, unanticipated costs to UC in many areas from health to student housing, which for March 2020 alone totaled $558 million,” wrote Napolitano.</p>
 
 <p>“As you consider the 2020-2021 State budget, providing funding for UC to cover some of our COVID-19 response costs will help UC provide students the education they were promised, treat our employees with fairness, and provide our communities with compassionate care.”</p>
-
+<img alt="Northeastern University" src="assets/northeastern.jpg">
+Caption: Northeastern University with the second largest international student population for the year 2020/2021.
+Photo credit: Yushang Xu/Unsplash.com
 <p>Smaller, liberal arts colleges have experienced financial challenges for years, and experts have predicted a decline in their number since before COVID-19, the disease caused by the coronavirus.</p>
 
 <p>MacMurray College in Jacksonville, Illinois, for example, with a student enrollment of 550 students, and 25% ethnic diversity, closed in May 2020 after 174 years of educating students. MacMurray’s board voted unanimously to close the school after determining there was “no viable financial path forward,” said Chairman of the Board of Trustees Charles O'Connell in a press release.</p>
@@ -48,6 +54,7 @@
 <p>Colleges are prioritizing student outreach to include China, India and Vietnam, according to IIE. Of the more than 1 million international students in the U.S., half are from China and India.</p>
 
 <p>Among Ivy League admissions for the Class of 2024, international students made up 14% of admitted students at Dartmouth College in New Hampshire and 10% of admissions at Princeton University in New Jersey, according to data from the group International College Counselors.</p>
+
 
 <p>And while Ivy League — top-rated, prestigious schools that admit only a fraction of applicants — enjoy large endowments (operating budgets), they, too, have made cutbacks in the face of escalating costs and reduced revenue during the pandemic.</p>
 
@@ -62,7 +69,11 @@
 <p>“Unfortunately, due in large part to challenges securing visas and safety concerns related to the pandemic, international student enrollment at Wesleyan [University] decreased by about 15% this semester,” according to Lauren Rubenstein, the director of media relations and public relations at Wesleyan University in Connecticut, in an email to VOA.</p>
 
 <p>“A significant number of our frosh international students postponed their matriculation until the spring term because they were not able to secure visa interview appointments prior to the start of classes this fall.” Frosh is a nickname for freshmen, or first-year students.</p>
+<iframe title="Top 25 Universities - Largest International Student Population" aria-label="table" id="datawrapper-chart-225fZ" src="https://datawrapper.dwcdn.net/225fZ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="1039"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+univeristy wisconsin photo credit: Jonah Brown unsplash.com
 
+empty seats: Philippe Bout credit unsplash
 <p>Wesleyan is collaborating with “peer institutions” to host a series of virtual events for international students, including virtual admissions workshops, online fairs, and virtual school visits to recruit students for the coming year, according to Rubenstein. International students make up 12% of Wesleyan's student body.</p>
 
 <p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to NAFSA’s 2020 Financial Impact Survey.</p>
@@ -72,6 +83,7 @@
 <p>NAFSA estimates that higher education will lose “at least $3 billion” because of declines in international student enrollment for Fall 2020.</p>
 
 <p>Schools say it’s not only through revenue that foreign students contribute to the college or university community.</p>
+
 
 <p>“International students contribute greatly to Wesleyan and our surrounding community by increasing social, cultural, and linguistic diversity on campus and beyond,” Rubenstein wrote. “This diversity is invaluable to the experience of all students.”</p>
 
