--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Alexandra Macia">
+  <meta name="keywords" content="International student,University, Covid, Economy">
+  <meta name="description" content="International students could be solution to covid financial impact at universities">
   <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,17 +13,31 @@
 
 </head>
 <body>
+  <div class="header">
   <h1>Foreign Students Could Buoy Cash-strapped US Universities</h1>
-  <h4>Alexandra Macia</h4>
-  <h4>October 21, 2020</h4>
-<div id="content">
+</div>
+<div class="content">
+  <div class="img-wrapper">
+    <div class="border">
+  <img alt="Northeastern University" src="assets/northeastern.jpg">
+</div>
+  <div class="caption">
+  <p> Northeastern University, the campus with the second largest international student population for the year 2020/2021.
+  Photo credit: Yushang Xu/Unsplash</p>
+</div>
+</div>
+<h4>By Alexandra Macia</h4>
+<h5>October 21, 2020</h5>
+
 <p>International students might be a boon for many colleges and universities to offset losses during the coronavirus pandemic, say experts.</p>
 
-<p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the Global Migration Center at the University of California, Davis.</p>
+<p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the <a href="https://globalmigration.ucdavis.edu/devastating-economic-consequences-pushing-foreign-students-out-country">Global Migration Center at the University of California, Davis.</a></p>
 
 <p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
+<div class="map1">
 <iframe title="Economic Value International Students: Community College " aria-label="Split Bars" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="4315"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
+</div>
 
 <p>Additionally, when international students pay full rates for college or university, domestic students benefit.</p>
 
@@ -28,8 +46,10 @@
 <p>“International students — who are not eligible for financial aid and pay full price tuition — are a critical source of tuition revenues for public and private American universities,” it posted in July on its website.</p>
 
 <p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
+<div class="map">
 <iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
+</div>
 
 <p>But colleges and universities are hurting financially as the pandemic has shut down many campuses since March, sending students online and off campus, and causing many to defer admission or transfer until the pandemic subsides.</p>
 
@@ -39,9 +59,13 @@
 <p>“I am bringing to your attention these significant, unanticipated costs to UC in many areas from health to student housing, which for March 2020 alone totaled $558 million,” wrote Napolitano.</p>
 
 <p>“As you consider the 2020-2021 State budget, providing funding for UC to cover some of our COVID-19 response costs will help UC provide students the education they were promised, treat our employees with fairness, and provide our communities with compassionate care.”</p>
-<img alt="Northeastern University" src="assets/northeastern.jpg">
-Caption: Northeastern University with the second largest international student population for the year 2020/2021.
-Photo credit: Yushang Xu/Unsplash.com
+<div class="img-wrapper">
+<img alt="University of Wisconsin-Madison" src="assets/universitywisconsin.jpg">
+  <div class="caption">
+<p>The University of Wisconsin Madison campus, ranked the 24th largest international student population for the year 2020/2021.
+Photo credit: Jonah Brown/Unsplash</p>
+</div>
+</div>
 <p>Smaller, liberal arts colleges have experienced financial challenges for years, and experts have predicted a decline in their number since before COVID-19, the disease caused by the coronavirus.</p>
 
 <p>MacMurray College in Jacksonville, Illinois, for example, with a student enrollment of 550 students, and 25% ethnic diversity, closed in May 2020 after 174 years of educating students. MacMurray’s board voted unanimously to close the school after determining there was “no viable financial path forward,” said Chairman of the Board of Trustees Charles O'Connell in a press release.</p>
@@ -69,14 +93,14 @@ Photo credit: Yushang Xu/Unsplash.com
 <p>“Unfortunately, due in large part to challenges securing visas and safety concerns related to the pandemic, international student enrollment at Wesleyan [University] decreased by about 15% this semester,” according to Lauren Rubenstein, the director of media relations and public relations at Wesleyan University in Connecticut, in an email to VOA.</p>
 
 <p>“A significant number of our frosh international students postponed their matriculation until the spring term because they were not able to secure visa interview appointments prior to the start of classes this fall.” Frosh is a nickname for freshmen, or first-year students.</p>
+<div class="map">
 <iframe title="Top 25 Universities - Largest International Student Population" aria-label="table" id="datawrapper-chart-225fZ" src="https://datawrapper.dwcdn.net/225fZ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="1039"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
-univeristy wisconsin photo credit: Jonah Brown unsplash.com
+</div>
 
-empty seats: Philippe Bout credit unsplash
 <p>Wesleyan is collaborating with “peer institutions” to host a series of virtual events for international students, including virtual admissions workshops, online fairs, and virtual school visits to recruit students for the coming year, according to Rubenstein. International students make up 12% of Wesleyan's student body.</p>
 
-<p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to NAFSA’s 2020 Financial Impact Survey.</p>
+<p>But because of COVID-19 and increased visa and travel restrictions, international student enrollment for Fall 2020 is expected to decline again and further impact funding at institutions, according to <a href="https://www.nafsa.org/sites/default/files/media/document/2020-financial-impact-survey.pdf">NAFSA’s 2020 Financial Impact Survey.</a></p>
 
 <p>“The loss of $41 billion contributed to local economies by international students each year would also be incredibly damaging to America as it begins to recover from the COVID-19 pandemic,” said Mary Sue Coleman, Association of American Universities president in a briefing regarding restrictions on international students in July 2020.</p>
 
@@ -90,6 +114,7 @@ empty seats: Philippe Bout credit unsplash
 <p>They also “contribute to the intellectual vibrancy and diversity of our campuses,” wrote the Presidents’ Alliance on Higher Education and Immigration to the Department of Homeland Security earlier this year, when the coronavirus began to send students home and shut campuses.</p>
 
 <p>“A recognition of these contributions and commitment to continuing to welcome these students in future enrollment cycles are absolutely critical to maintaining our country’s top-tier status in attracting and retaining international students,” the alliance of more than 450 college and university presidents stated.</p>
+
 </div>
 </body>
 </html>
