--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Alexandra Macia">
-  <meta name="keywords" content="International student,University, Covid, Economy">
+  <meta name="keywords" content="International student, University, Covid, Economy, Debt">
   <meta name="description" content="International students could be solution to covid financial impact at universities">
   <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
