added copyright and headline/title

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="description" content="International students could be solution to covid financial impact at universities">
   <link rel="stylesheet" href="styles.css" type="text/css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <title>Foreign Students Article</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Murecho:wght@400;700&family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+  <title>International Students Could Help Cash-strapped US Universities</title>
 
 </head>
 <body>
   <div class="header">
-  <h1>Foreign Students Could Buoy Cash-strapped US Universities</h1>
+  <h1>International Students Could Help Cash-strapped US Universities</h1>
 </div>
 <div class="content">
   <div class="img-wrapper">
@@ -114,7 +114,7 @@ Photo credit: Jonah Brown/Unsplash</p>
 <p>They also “contribute to the intellectual vibrancy and diversity of our campuses,” wrote the Presidents’ Alliance on Higher Education and Immigration to the Department of Homeland Security earlier this year, when the coronavirus began to send students home and shut campuses.</p>
 
 <p>“A recognition of these contributions and commitment to continuing to welcome these students in future enrollment cycles are absolutely critical to maintaining our country’s top-tier status in attracting and retaining international students,” the alliance of more than 450 college and university presidents stated.</p>
-
+<p>copyright by <a href="https://alexandramacia.github.io/">Alexandra Macia</a>, 2021</p>
 </div>
 </body>
 </html>
