--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Alexandra Macia">
@@ -34,10 +34,10 @@
 <p>“U.S. education is an extremely valuable service export, roughly equivalent to total exports of wheat, corn, coal, and natural gas,” according to the <a href="https://globalmigration.ucdavis.edu/devastating-economic-consequences-pushing-foreign-students-out-country">Global Migration Center at the University of California, Davis.</a></p>
 
 <p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
-<div class="map1">
-<iframe title="Economic Value International Students: Community College " aria-label="Split Bars" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="4315"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-</script>
-</div>
+
+  <iframe title="Economic Value International Students: Community Colleges " aria-label="Table" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="975"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+  </script>
+
 
 <p>Additionally, when international students pay full rates for college or university, domestic students benefit.</p>
 
@@ -46,10 +46,9 @@
 <p>“International students — who are not eligible for financial aid and pay full price tuition — are a critical source of tuition revenues for public and private American universities,” it posted in July on its website.</p>
 
 <p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
-<div class="map">
+
 <iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
-</div>
 
 <p>But colleges and universities are hurting financially as the pandemic has shut down many campuses since March, sending students online and off campus, and causing many to defer admission or transfer until the pandemic subsides.</p>
 
@@ -93,10 +92,9 @@ Photo credit: Jonah Brown/Unsplash</p>
 <p>“Unfortunately, due in large part to challenges securing visas and safety concerns related to the pandemic, international student enrollment at Wesleyan [University] decreased by about 15% this semester,” according to Lauren Rubenstein, the director of media relations and public relations at Wesleyan University in Connecticut, in an email to VOA.</p>
 
 <p>“A significant number of our frosh international students postponed their matriculation until the spring term because they were not able to secure visa interview appointments prior to the start of classes this fall.” Frosh is a nickname for freshmen, or first-year students.</p>
-<div class="map">
-<iframe title="Top 25 Universities - Largest International Student Population" aria-label="table" id="datawrapper-chart-225fZ" src="https://datawrapper.dwcdn.net/225fZ/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="1039"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-</script>
-</div>
+
+  <iframe title="Top 25 Universities - Largest International Student Population" aria-label="Table" id="datawrapper-chart-225fZ" src="https://datawrapper.dwcdn.net/225fZ/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="1055"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+  </script>
 
 <p>Wesleyan is collaborating with “peer institutions” to host a series of virtual events for international students, including virtual admissions workshops, online fairs, and virtual school visits to recruit students for the coming year, according to Rubenstein. International students make up 12% of Wesleyan's student body.</p>
 
