--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div class="img-wrapper">
 <img alt="University of Wisconsin-Madison" src="assets/universitywisconsin.jpg">
   <div class="caption">
-<p>The University of Wisconsin Madison campus, ranked the 24th largest international student population for the year 2020/2021.
+<p>The University of Wisconsin-Madison campus, ranked the 24th largest international student population for the year 2020/2021.
 Photo credit: Jonah Brown/Unsplash</p>
 </div>
 </div>
