added changes to style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Alexandra Macia">
   <meta name="keywords" content="International student, University, Covid, Economy, Debt">
@@ -13,17 +14,18 @@
 
 </head>
 <body>
+  <div class="color">
   <div class="header">
   <h1>International Students Could Help Cash-strapped US Universities</h1>
 </div>
 <div class="content">
-  <div class="img-wrapper">
+  <div class="img-wrapper1">
     <div class="border">
-  <img alt="Northeastern University" src="assets/northeastern.jpg">
+  <img src="assets/columbia.jpg" alt="Columbia University">
 </div>
-  <div class="caption">
-  <p> Northeastern University, the campus with the second largest international student population for the year 2020/2021.
-  Photo credit: Yushang Xu/Unsplash</p>
+  <div class="caption1">
+  <p> Columbia University in New York City was ranked the campus with the fourth largest international student population for the year 2020/2021.
+  Photo credit: Chenyu Guan/Unsplash</p>
 </div>
 </div>
 <h4>By Alexandra Macia</h4>
@@ -35,16 +37,19 @@
 
 <p>International students contributed 458,290 jobs and $41 billion to the U.S. economy in the 2018-2019 academic year, according to the nonprofit Association of International Educators (NAFSA).</p>
 
-  <iframe title="Economic Value International Students: Community Colleges " aria-label="Table" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="975"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-  </script>
+<iframe title="Economic Value International Students: Community Colleges " aria-label="Table" id="datawrapper-chart-hNKYB" src="https://datawrapper.dwcdn.net/hNKYB/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="975"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+
 
 
 <p>Additionally, when international students pay full rates for college or university, domestic students benefit.</p>
 
 <p>“Full-sticker price tuition revenue from international students helps to provide more subsidies for American students,” the Global Migration Center explained. “International students also help universities buffer against declines in government funding that have occurred for several decades.”</p>
-
+<div class="blockquote">
+<blockquote>
 <p>“International students — who are not eligible for financial aid and pay full price tuition — are a critical source of tuition revenues for public and private American universities,” it posted in July on its website.</p>
-
+</blockquote>
+</div>
 <p>Mostly from Asia, close to 162,000 international students attended colleges and universities in California last year, adding $6.8 billion of the $41 billion foreign students bring to the U.S. economy.</p>
 
 <iframe title="International Students Places of Origin" aria-label="Map" id="datawrapper-chart-EMgMy" src="https://datawrapper.dwcdn.net/EMgMy/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="408"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
@@ -58,9 +63,9 @@
 <p>“I am bringing to your attention these significant, unanticipated costs to UC in many areas from health to student housing, which for March 2020 alone totaled $558 million,” wrote Napolitano.</p>
 
 <p>“As you consider the 2020-2021 State budget, providing funding for UC to cover some of our COVID-19 response costs will help UC provide students the education they were promised, treat our employees with fairness, and provide our communities with compassionate care.”</p>
-<div class="img-wrapper">
+<div class="img-wrapper2">
 <img alt="University of Wisconsin-Madison" src="assets/universitywisconsin.jpg">
-  <div class="caption">
+  <div class="caption2">
 <p>The University of Wisconsin-Madison campus, ranked the 24th largest international student population for the year 2020/2021.
 Photo credit: Jonah Brown/Unsplash</p>
 </div>
@@ -81,10 +86,11 @@ Photo credit: Jonah Brown/Unsplash</p>
 
 <p>And while Ivy League — top-rated, prestigious schools that admit only a fraction of applicants — enjoy large endowments (operating budgets), they, too, have made cutbacks in the face of escalating costs and reduced revenue during the pandemic.</p>
 
-
-
+<div class="blockquote">
+<blockquote>
 <p>“Faced with an increasingly competitive global higher education environment vying to attract the brightest minds from around the world, institutions across the United States continue to explore and expand ways to build recruitment pipelines and work to create an inclusive environment that reiterates that international students are welcome here,” IIE reported.</p>
-
+</blockquote>
+</div>
 <p>But enrollment of international students stalled in the last counting, according to IIE. Reasons include the high cost of tuition and fees, visa barriers, perceived crime in the U.S., political rhetoric and anti-immigrant speech.</p>
 
 <p>Among responding colleges and universities, 51% reported a decrease, 42% reported an increase, and 7% indicated the number was the same as last year, in new international student enrollment.</p>
@@ -112,7 +118,10 @@ Photo credit: Jonah Brown/Unsplash</p>
 <p>They also “contribute to the intellectual vibrancy and diversity of our campuses,” wrote the Presidents’ Alliance on Higher Education and Immigration to the Department of Homeland Security earlier this year, when the coronavirus began to send students home and shut campuses.</p>
 
 <p>“A recognition of these contributions and commitment to continuing to welcome these students in future enrollment cycles are absolutely critical to maintaining our country’s top-tier status in attracting and retaining international students,” the alliance of more than 450 college and university presidents stated.</p>
-<p>copyright by <a href="https://alexandramacia.github.io/">Alexandra Macia</a>, 2021</p>
+<div class="copyright">
+<p>Copyright by <a href="https://alexandramacia.github.io/" style="color:white;">Alexandra Macia</a>, 2021</p>
+</div>
+</div>
 </div>
 </body>
 </html>
